--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="#" class="btn-box">More about Me</a>
         </div>
     </section>
-    <section class="about" id="about">
+    <section class="about reveal" id="about">
         <div class="about-img">
             <img src="img/asif-profile-img.png" height="200" />
         </div>
@@ -56,7 +56,7 @@
         </div>
 
     </section>
-    <section class="services" id="services">
+    <section class="services reveal" id="services">
         <div class="container">
             <h1 class="sub-title">My <span>Services</span></h1>
             <div class="services-list">
@@ -81,7 +81,7 @@
             </div>
         </div>
     </section>
-    <section class="skill" id="skill">
+    <section class="skill reveal" id="skill">
         <h1 class="sub-title">My <span>Skills</span></h1>
         <div class="skillContainer">
         <div class="container">
@@ -176,7 +176,7 @@
         </div>
         </div>
     </section>
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio reveal" id="portfolio">
         <div class="main-text">
             <h2>Latest <span>Project</span></h2>
             <div class="portfolio-content">
@@ -207,7 +207,7 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="contact">
+    <section class="contact reveal" id="contact">
         <div class="contact-text">
             <h2>Contact<span>Me</span></h2>
             <h4>Let's work together</h4>
