remove action from form

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
         </div>
         <div class="contact-form">
-            <form id="loginForm" method="POST" action="sendmail.php">
+            <form id="loginForm" method="POST" action="">
                 <input type="text" placeholder="Enter you name" id="userName" name="userName" />
                 <input type="email" placeholder="Enter you email" id="email" name="email" />
                 <input type="text" placeholder="Enter your subject" id="subject" name="subject" />
