Fix Some UI issues and update contect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+        <span class="material-symbols-outlined">arrow_upward</span>
+    </button>
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
         <span class="iconToggle" id="iconToggle" onclick="toggleNav(this)">
@@ -47,12 +49,12 @@
     <section id="about">
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/asif-profile-img.png" height="200" />
+            <img src="img/asif-img-1.png" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
-            <h4>Full Stack Developer</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h4>Senior UI Developer</h4>
+            <p>I am senior UI Developer currently working in US based company. It was my passion to be in IT field since childhood. After my 10+2 completion I decided to choose this field to become web designer and graphic designer. And then I complete my Professional Diploma in Computer Application from F-Tec Institute. I also make myself up to date from new software which come in market specially in my field. I also have done Certificate course in Angular CLI from Ducat. I complete my graduation(B.A Political Science) from VBS Purvanchal University in 2013</p>
             <a href="#" class="btn-box">More about me</a>
         </div>
     </div>
@@ -64,19 +66,19 @@
             <div class="services-list">
                 <div>
                     <span class="material-symbols-outlined">phone_in_talk</span>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    <h2>Web Design</h2>
+                    <p>I work on multiple website and design them by myself. Make CRM website design and maintain large backend website.Make E-Commerce website Khoobsurati.com. I also work on WordPrees. Cureently I am working on which company I make SaaS software for them and work on that website only by myself I am single UI developer there.  </p>
                     <a href="#" class="read">Learn more</a>
                 </div>
                 <div>
                     <span class="material-symbols-outlined">phone_in_talk</span>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    <h2>Email Design</h2>
+                    <p>I have design too many emailer for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user friendly and responsive. Also make emailer to keep in mind that it should be fit exact in gmail and outlook properly. </p>
                     <a href="#" class="read">Learn more</a>
                 </div>
                 <div>
                     <span class="material-symbols-outlined">phone_in_talk</span>
-                    <h2>UI/UX Design</h2>
+                    <h2>Graphic Design</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     <a href="#" class="read">Learn more</a>
                 </div>
@@ -220,18 +222,6 @@
             <h2>Contact <span>Me</span></h2>
             <h4>Let's work together</h4>
             <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum v Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
-            <div class="conatct-list">
-                <ul>
-                    <li><span>Icon</span> contact@gmail.com</li>
-                    <li><span>Icon</span>981111111</li>
-                </ul>
-            </div>
-            <div class="conatct-icons">
-                <a href="#" style="--i:7"><span class="material-symbols-outlined">phone_in_talk</span></a>
-                <a href="#" style="--i:7"><span class="material-symbols-outlined">attach_email</span></a>
-                <a href="#" style="--i:7"><span class="material-symbols-outlined">slideshow</span></a>
-                <a href="#" style="--i:7"><span class="material-symbols-outlined">location_on</span></a>
-            </div>
         </div>
         <div class="contact-form">
             <form id="loginForm" method="POST" action="">
