Fix Responsive Issues

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             <h1 class="sub-title">My <span>Services</span></h1>
             <div class="services-list">
                 <div>
-                    <span class="material-symbols-outlined">phone_in_talk</span>
-                    <h2>Web Design</h2>
+                    <span class="material-symbols-outlined">empty_dashboard</span>
+                    <h2>Website Design</h2>
                     <p>I work on multiple website and design them by myself. Make CRM website design and maintain large backend website.Make E-Commerce website Khoobsurati.com. I also work on WordPrees. Cureently I am working on which company I make SaaS software for them and work on that website only by myself I am single UI developer there.  </p>
                     <a href="#" class="read">Learn more</a>
                 </div>
                 <div>
-                    <span class="material-symbols-outlined">phone_in_talk</span>
+                    <span class="material-symbols-outlined">mail</span>
                     <h2>Email Design</h2>
                     <p>I have design too many emailer for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user friendly and responsive. Also make emailer to keep in mind that it should be fit exact in gmail and outlook properly. </p>
                     <a href="#" class="read">Learn more</a>
                 </div>
                 <div>
-                    <span class="material-symbols-outlined">phone_in_talk</span>
+                    <span class="material-symbols-outlined">design_services</span>
                     <h2>Graphic Design</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    <p>I make to many template design in Photoshop. I also make some print able design in Corel Draw. I have worked on Figma, Invision, Zero Height, Adobe Illustrator Graphic design tools. I have work 1 year and 1 month as a Graphic designer and Web designer in my first company.</p>
                     <a href="#" class="read">Learn more</a>
                 </div>
             </div>
@@ -94,25 +94,34 @@
             <h1 class="heading">Technical Skills</h1>
             <div class="technical-bars">
                 <div class="bar">
-                    <span class="material-symbols-outlined">html</span>
+                    <!-- <span class="material-symbols-outlined">html</span> -->
                     <div class="info">
-                        <span>HTML</span>
+                        <span>HTML / HTML5</span>
                     </div>
                     <div class="progress-line html">
                         <span></span>
                     </div>
                 </div>
                 <div class="bar">
-                    <span class="material-symbols-outlined">css</span>
+                    <!-- <span class="material-symbols-outlined">css</span> -->
                     <div class="info">
-                        <span>CSS</span>
+                        <span>CSS / CSS3</span>
                     </div>
                     <div class="progress-line css">
                         <span></span>
                     </div>
                 </div>
                 <div class="bar">
-                    <span class="material-symbols-outlined">javascript</span>
+                    <!-- <span class="material-symbols-outlined">css</span> -->
+                    <div class="info">
+                        <span>Bootstrap 5 / Tailwind CSS</span>
+                    </div>
+                    <div class="progress-line css">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar">
+                    <!-- <span class="material-symbols-outlined">javascript</span> -->
                     <div class="info">
                         <span>Java Script</span>
                     </div>
@@ -121,18 +130,18 @@
                     </div>
                 </div>
                 <div class="bar">
-                    <span class="material-symbols-outlined">html</span>
+                    <!-- <span class="material-symbols-outlined">html</span> -->
                     <div class="info">
-                        <span>JQuery</span>
+                        <span>jQuery / jQuery Mobile</span>
                     </div>
                     <div class="progress-line JQuery">
                         <span></span>
                     </div>
                 </div>
                 <div class="bar">
-                    <span class="material-symbols-outlined">html</span>
+                    <!-- <span class="material-symbols-outlined">html</span> -->
                     <div class="info">
-                        <span>React</span>
+                        <span>React / Angular CLI</span>
                     </div>
                     <div class="progress-line react">
                         <span></span>
@@ -151,7 +160,7 @@
                             <circle class="path path-1" cx="100" cy="100" r="80"></circle>
                         </svg>
                         <div class="percentage">90%</div>
-                        <div class="text">Creativivty</div>
+                        <div class="text">Creativity</div>
                     </div>
                     <div class="radial-bar">
                         <svg x="0px" y="0px" viewBox="0 0 200 200">
@@ -166,7 +175,7 @@
                             <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
                             <circle class="path path-1" cx="100" cy="100" r="80"></circle>
                         </svg>
-                        <div class="percentage">90%</div>
+                        <div class="percentage">95%</div>
                         <div class="text">Problem Solving</div>
                     </div>
                     <div class="radial-bar">
@@ -174,7 +183,7 @@
                             <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
                             <circle class="path path-1" cx="100" cy="100" r="80"></circle>
                         </svg>
-                        <div class="percentage">90%</div>
+                        <div class="percentage">95%</div>
                         <div class="text">Team Work</div>
                     </div>
                 </div>
@@ -189,7 +198,7 @@
             <h2>Latest <span>Project</span></h2>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="img/asif-circle-img.png" />
+                    <img src="img/blank-img.png" />
                     <div class="layer">
                         <h5>UI/UX Design</h5>
                         <p>Lorem Ipsum</p>
@@ -197,7 +206,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/asif-circle-img.png" />
+                    <img src="img/blank-img.png" />
                     <div class="layer">
                         <h5>UI/UX Design</h5>
                         <p>Lorem Ipsum</p>
@@ -205,7 +214,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/asif-circle-img.png" />
+                    <img src="img/blank-img.png" />
                     <div class="layer">
                         <h5>UI/UX Design</h5>
                         <p>Lorem Ipsum</p>
@@ -221,7 +230,7 @@
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
             <h4>Let's work together</h4>
-            <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum v Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+            <p>You can contact me through my linkedIn ID given above. I open to work with company. I have 11 years and 6 month work experience in my field. I can covert any template design in code with help of HTML,CSS and Javascript and It's plugins.</p>
         </div>
         <div class="contact-form">
             <form id="loginForm" method="POST" action="">
