Add meta tags and fav icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta hhtp-equiv="X-UA-COMPATIBLE" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Portfolio</title>
+    <title>Asif Aleem Portfolio</title>
+    <meta name="description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
+    <meta name="keywords" content="Senior UI Developer in Delhi, Responsive Web Designer in Delhi, Frontend Developer in Delhi, UI Developer in Delhi, Web Designer IN Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
+    <meta name="author" content="Asif Aleem">
+    <meta name="copyright" content="Copyright © Asif Aleem">
+    <meta name="classification" content="portfolio"/>
+    <link rel="canonical" href="https://asifaleem-del.github.io/portfolio/"/>
+    <!-- Favicon Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+
+    <meta property="og:title" content="Asif Aleem Portfolio" />
+    <meta property="og:description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
+    <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
+    <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/asif-circle-img.png" />
+
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
