--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta hhtp-equiv="X-UA-COMPATIBLE" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Asif Aleem Senior UI Developer</title>
+    <title>Asif Aleem | Senior UI Developer</title>
     <meta name="description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
     <meta name="keywords" content="Senior UI Developer in Delhi, Responsive Web Designer in Delhi, Frontend Developer in Delhi, UI Developer in Delhi, Web Designer IN Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
     <meta name="author" content="Asif Aleem">
@@ -14,7 +14,7 @@
     <!-- Favicon Icon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 
-    <meta property="og:title" content="Asif Aleem Senior UI Developer" />
+    <meta property="og:title" content="Asif Aleem | Senior UI Developer" />
     <meta property="og:description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
     <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/asif-circle-img.png" />
