Implement whats app features

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <p>You can contact me through my linkedIn ID given above. I open to work with company. I have 11 years and 6 month work experience in my field. I can covert any template design in code with help of HTML,CSS and Javascript and It's plugins.</p>
         </div>
         <div class="contact-form">
-            <form id="loginForm" method="POST" action="">
+            <form id="loginForm" method="POST" action="sendmail.php">
                 <input type="text" placeholder="Enter you name" id="userName" name="userName" />
                 <input type="email" placeholder="Enter you email" id="email" name="email" />
                 <input type="text" placeholder="Enter your subject" id="subject" name="subject" />
@@ -259,6 +259,9 @@
     </section>
     <div class="last-text">
         <p>Developed by Asif Aleem @2024</p>
+    </div>
+    <div class="whatAppChat" style="position: fixed; right: 30px; bottom: 70px;">
+        <a href="https://wa.me/917518969778" target="_blank"><img src="img/whatsapp_icon.png" width="50" /></a>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/main.js"></script>
