Fix image dimension and look

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="about">
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/asif-img-1.png" />
+            <img src="img/CircledAsifdp.png" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
@@ -260,7 +260,7 @@
     <div class="last-text">
         <p>Developed by Asif Aleem @2024</p>
     </div>
-    <div class="whatAppChat" style="position: fixed; right: 30px; bottom: 70px;">
+    <div class="whatsAppChat">
         <a href="https://wa.me/917518969778" target="_blank"><img src="img/whatsapp_icon.png" width="50" /></a>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
