make some changes of UI

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#contact" style="--i:7"><span class="material-symbols-outlined" title="Contact">location_on</span></a>
             </div>
             
-            <a href="#about" class="btn-box">More about Me</a>
+            <a href="#about" class="btn-box">About Me</a>
         </div>
     </section>
     <section id="about">
@@ -69,7 +69,7 @@
             <h2>About <span>Me</span></h2>
             <h4>Senior UI Developer</h4>
             <p>I am senior UI Developer currently working in US based company. It was my passion to be in IT field since childhood. After my 10+2 completion I decided to choose this field to become web designer and graphic designer. And then I complete my Professional Diploma in Computer Application from F-Tec Institute. I also make myself up to date from new software which come in market specially in my field. I also have done Certificate course in Angular CLI from Ducat. I complete my graduation(B.A Political Science) from VBS Purvanchal University in 2013</p>
-            <a href="#" class="btn-box">More about me</a>
+            <a href="#skill" class="btn-box">My Skills</a>
         </div>
     </div>
     </section>
