--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Asif Aleem | Senior UI Developer</title>
     <meta name="description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
-    <meta name="keywords" content="Senior UI Developer in Delhi, Responsive Web Designer in Delhi, Frontend Developer in Delhi, UI Developer in Delhi, Web Designer IN Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
+    <meta name="keywords" content="Senior UI Developer in Delhi, Responsive Web Designer in Delhi, Frontend Developer in Delhi, UI Developer in Delhi, Web Designer in Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
     <meta name="author" content="Asif Aleem">
     <meta name="copyright" content="Copyright © Asif Aleem">
     <meta name="classification" content="portfolio"/>
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Asif Aleem | Senior UI Developer" />
     <meta property="og:description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
-    <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/asif-circle-img.png" />
+    <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/favicon.png" />
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -212,27 +212,35 @@
             <h2>Latest <span>Project</span></h2>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="img/blank-img.png" />
+                    <img src="img/work-1.png" />
                     <div class="layer">
-                        <h5>UI/UX Design</h5>
-                        <p>Lorem Ipsum</p>
-                        <a href="#" class="bx bx-link-external" style="color: aliceblue;">Demo</a>
+                        <h5>Emailer</h5>
+                        <p>Make personal Emailer for my personal use.</p>
+                        <a href="https://asifaleem-del.github.io/Asif-Emailer/" class="bx bx-link-external" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/blank-img.png" />
+                    <img src="img/work-2.png" />
                     <div class="layer">
-                        <h5>UI/UX Design</h5>
-                        <p>Lorem Ipsum</p>
-                        <a href="#" class="bx bx-link-external" style="color: aliceblue;">Demo</a>
+                        <h5>Portfolio</h5>
+                        <p>Make personal Portfolio.</p>
+                        <a href="https://asifaleem-del.github.io/portfolio/" class="bx bx-link-external" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/blank-img.png" />
+                    <img src="img/work-3.png" />
                     <div class="layer">
-                        <h5>UI/UX Design</h5>
-                        <p>Lorem Ipsum</p>
-                        <a href="#" class="bx bx-link-external" style="color: aliceblue;">Demo</a>
+                        <h5>Travel Website</h5>
+                        <p>Make personal Emailer for my personal use.</p>
+                        <a href="https://asifaleem-del.github.io/travel/" class="bx bx-link-external" target="_blank">View</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="img/work-4.png" />
+                    <div class="layer">
+                        <h5>Animated Cup</h5>
+                        <p>Make personal Emailer for my personal use.</p>
+                        <a href="https://asifaleem-del.github.io/animated-teacup/" class="bx bx-link-external" target="_blank">View</a>
                     </div>
                 </div>
             </div>
