--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LRKN0NXR60"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LRKN0NXR60');
+</script>
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">
         <span class="material-symbols-outlined">arrow_upward</span>
