Update og image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Asif Aleem | Senior UI Developer" />
     <meta property="og:description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
-    <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/favicon.png" />
+    <meta property="og:image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
