--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <section class="home" id="home">
         <div class="profile-pic">
-            <img src="img/asif-circle-img.png" />
+            <img src="img/asif-circle-img.png" alt="Asif Aleem" title="Asif Aleem" />
         </div>
         <div class="home-content">
             <h3>Hello, Myself</h3>
@@ -72,7 +72,7 @@
     <section id="about">
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/CircledAsifdp.png" />
+            <img src="img/CircledAsifdp.png" alt="Asif Aleem" title="Asif Aleem" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
