--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 
   gtag('config', 'G-LRKN0NXR60');
 </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Person",
+      "name": "Asif Aleem",
+      "url": "https://asifaleem-del.github.io/portfolio/",
+      "image": "https://asifaleem-del.github.io/portfolio/img/asif-circle-img.png",
+      "sameAs": [
+        "https://www.linkedin.com/in/asif-aleem-99aa7516a/",
+        "https://asifaleem-del.github.io/portfolio/"
+      ],
+      "jobTitle": "Senior UI Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Ostendio"
+      }  
+    }
+    </script>
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">
         <span class="material-symbols-outlined">arrow_upward</span>
