--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta hhtp-equiv="X-UA-COMPATIBLE" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Asif Aleem | Senior UI Developer</title>
-    <meta name="description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
-    <meta name="keywords" content="Senior UI Developer in Delhi, Responsive Web Designer in Delhi, Frontend Developer in Delhi, UI Developer in Delhi, Web Designer in Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
+    <meta name="description" content="I am Senior UI Developer in a US based Company, Work as Web Designer and Graphic Designer." />
+    <meta name="keywords" content="Ostendio UI Developer, Responsive Web Designer, Frontend Developer, UI Developer, Web Designer in Delhi, Graphic Designer in Delhi, HTML, CSS, Java Script, Angular, React" />
     <meta name="author" content="Asif Aleem">
     <meta name="copyright" content="Copyright © Asif Aleem">
     <meta name="classification" content="portfolio"/>
     <link rel="canonical" href="https://asifaleem-del.github.io/portfolio/"/>
     <!-- Favicon Icon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <meta property="og:title" content="Asif Aleem | Senior UI Developer" />
-    <meta property="og:description" content="I am Senior UI Developer in a US based Company. I have 11 years 6 months experience in Software field." />
+    <meta property="og:description" content="I am Senior UI Developer in a US based Company. Work as Web Designer and Graphic Designer." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
 
-    <link rel="stylesheet" href="css/styles.css">
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <!-- Google tag (gtag.js) -->
@@ -49,12 +51,9 @@
       }  
     }
     </script>
-<body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">
-        <span class="material-symbols-outlined">arrow_upward</span>
-    </button>
+<body id="themeColorMode">
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#home" class="logo">Asif Aleem</a>
         <span class="iconToggle" id="iconToggle" onclick="toggleNav(this)">
             <span class="material-symbols-outlined menuIcon">menu</span>
             <span class="material-symbols-outlined CloseIcon">close</span>
@@ -67,10 +66,14 @@
             <a href="#portfolio" style="--i:4">Portfolio</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
+        <button class="themeColorBtn" onclick="toggleThemeColor()">
+            <span class="dark"><i class="fa-solid fa-lightbulb"></i></span>
+            <span class="light"><i class="fa-regular fa-lightbulb"></i></span>
+        </button>
     </header>
     <section class="home" id="home">
         <div class="profile-pic">
-            <img src="img/asif-circle-img.png" alt="Asif Aleem" title="Asif Aleem" />
+            <img src="img/asif-circle-img.png" alt="Asif Aleem" />
         </div>
         <div class="home-content">
             <h3>Hello, Myself</h3>
@@ -84,13 +87,13 @@
                 <a href="#contact" style="--i:7"><span class="material-symbols-outlined" title="Contact">location_on</span></a>
             </div>
             
-            <a href="#about" class="btn-box">About Me</a>
+            <a href="#about" class="btn-box">Who Am I</a>
         </div>
     </section>
     <section id="about">
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/CircledAsifdp.png" alt="Asif Aleem" title="Asif Aleem" />
+            <img src="img/CircledAsifdp.png" alt="Asif Aleem" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
@@ -239,7 +242,7 @@
             <h2>Latest <span>Project</span></h2>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="img/work-1.png" />
+                    <img src="img/work-1.png" alt="Asif Aleem Emailer" />
                     <div class="layer">
                         <h5>Emailer</h5>
                         <p>Make personal Emailer for my personal use.</p>
@@ -247,7 +250,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/work-2.png" />
+                    <img src="img/work-2.png" alt="Asif Aleem Portfolio Website" />
                     <div class="layer">
                         <h5>Portfolio</h5>
                         <p>Make personal Portfolio.</p>
@@ -255,7 +258,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/work-3.png" />
+                    <img src="img/work-3.png" alt="Asif Aleem Travel template Design" />
                     <div class="layer">
                         <h5>Travel Website</h5>
                         <p>Make personal Emailer for my personal use.</p>
@@ -263,7 +266,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="img/work-4.png" />
+                    <img src="img/work-4.png" alt="animated cup design" />
                     <div class="layer">
                         <h5>Animated Cup</h5>
                         <p>Make personal Emailer for my personal use.</p>
@@ -279,7 +282,7 @@
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
             <h4>Let's work together</h4>
-            <p>You can contact me through my linkedIn ID given above. I open to work with company. I have 11 years and 6 month work experience in my field. I can covert any template design in code with help of HTML,CSS and Javascript and It's plugins.</p>
+            <p>You can contact me through my linkedIn ID given above. I am open to work with company. I have 11 years and 6 month work experience in my field. I can convert any template design in code with help of HTML,CSS and Javascript and It's plugins.</p>
         </div>
         <div class="contact-form">
             <form id="loginForm" method="POST" action="sendmail.php">
@@ -296,8 +299,12 @@
         <p>Developed by Asif Aleem @2024</p>
     </div>
     <div class="whatsAppChat">
-        <a href="https://wa.me/917518969778" target="_blank"><img src="img/whatsapp_icon.png" width="50" /></a>
+        <a href="https://wa.me/917518969778" target="_blank"><img src="img/whatsapp_icon.png" alt="Asif Aleem WhatsApp Contact Number" width="50" /></a>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+        <span class="material-symbols-outlined">arrow_upward</span>
+    </button>
+    <div class="blinking active" id="blinkColorMode"></div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/main.js"></script>
 </body>
