--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <header class="header">
         <a href="#home" class="logo">Asif Aleem</a>
         <span class="iconToggle" id="iconToggle" onclick="toggleNav(this)">
-            <span class="material-symbols-outlined menuIcon">menu</span>
-            <span class="material-symbols-outlined CloseIcon">close</span>
+            <i class="fa-solid fa-bars menuIcon"></i>
+            <i class="fa-solid fa-xmark CloseIcon"></i>
         </span>
         <nav class="navbar" onclick="removeActive()">
             <a href="#home" style="--i:1" >Home</a>
@@ -299,10 +299,10 @@
         <p>Developed by Asif Aleem @2024</p>
     </div>
     <div class="whatsAppChat">
-        <a href="https://wa.me/917518969778" target="_blank"><img src="img/whatsapp_icon.png" alt="Asif Aleem WhatsApp Contact Number" width="50" /></a>
+        <a href="https://wa.me/917518969778" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">
-        <span class="material-symbols-outlined">arrow_upward</span>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
     <div class="blinking active" id="blinkColorMode"></div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
