--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
-    <div class="blinking active" id="blinkColorMode"></div>
+    <!-- <div class="blinking active" id="blinkColorMode"></div> -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/main.js"></script>
 </body>
